--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 1rem; /* mt-4 */
-  padding: 0 2rem; /* px-8 */
+  margin-top: 1rem; 
+  padding: 0 2rem; 
 }
 
 .header {
@@ -12,28 +12,28 @@
   justify-content: space-between;
   width: 100%;
   align-items: center;
-  margin-bottom: 2rem; /* mb-8 */
+  margin-bottom: 2rem;
 }
 
 .title {
-  font-size: 2rem; /* text-4xl */
+  font-size: 2rem; 
 }
 
-.card-container {
-  display: flex; /* Change from flex-wrap to flex */
+.db-card-container {
+  display: flex; 
   justify-content: flex-start;
-  gap: 1rem; /* gap-4 */
+  gap: 1rem; 
   width: 100%;
-  overflow-x: auto; /* Allow horizontal scrolling if necessary */
+  overflow-x: auto; 
 }
 
-.card {
-  background-color: #6b46c1; /* Purple-500 */
+.db-card {
+  background-color: #6b46c1; 
   color: white;
-  padding: 1rem; /* px-4 py-2 */
-  border-radius: 0.375rem; /* rounded-md */
-  width: 12rem; /* w-48 */
-  height: 12rem; /* h-48 */
+  padding: 1rem; 
+  border-radius: 0.375rem; 
+  width: 12rem; 
+  height: 12rem; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -41,6 +41,6 @@
   transition: transform 0.2s;
 }
 
-.card:hover {
-  transform: scale(1.05); /* Scale effect on hover */
+.db-card:hover {
+  transform: scale(1.05); 
 }
